; ModuleID = '/home/carl/AnghaBench/redis/src/modules/extr_testmodule.c_NotifyCallback.c'
source_filename = "/home/carl/AnghaBench/redis/src/modules/extr_testmodule.c_NotifyCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"notice\00", align 1
@.str.1 = private unnamed_addr constant [36 x i8] c"Got event type %d, event %s, key %s\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"HINCRBY\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"csc\00", align 1
@.str.4 = private unnamed_addr constant [14 x i8] c"notifications\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"1\00", align 1
@REDISMODULE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @NotifyCallback(i32* %0, i32 %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i8*, i8** %7, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 @RedisModule_StringPtrLen(i32* %12, i32* null)
  %14 = call i32 @RedisModule_Log(i32* %9, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0), i32 %10, i8* %11, i32 %13)
  %15 = load i32*, i32** %5, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @RedisModule_Call(i32* %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0), i32* %16, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0))
  %18 = load i32, i32* @REDISMODULE_OK, align 4
  ret i32 %18
}

declare dso_local i32 @RedisModule_Log(i32*, i8*, i8*, i32, i8*, i32) #1

declare dso_local i32 @RedisModule_StringPtrLen(i32*, i32*) #1

declare dso_local i32 @RedisModule_Call(i32*, i8*, i8*, i8*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
